apps/scrypted/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.product: Quadro-P620-SHARED
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted:v0.144.1-noble-nvidia@sha256:ec2746f4f847fd44f1f275ac3a535610b10a0e883b0644d02ac4925b43da2df3
          volumeMounts:
            - name: volume
              mountPath: /server/volume
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
              nvidia.com/gpu: '1'
          ports:
            - name: http
              containerPort: 11080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [scrypted]
