apps/scrypted/scrypted.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.product: Quadro-P620-SHARED
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted:v0.144.1-noble-nvidia@sha256:da86752279289444ba093caf908c2534abbdf134058143755cd0b085bd88b47c
          resources:
            requests:
              memory: 100M
            limits:
              nvidia.com/gpu: '1'
              memory: 4G
          volumeMounts:
            - name: volume
              mountPath: /server/volume
          ports:
            - name: http
              containerPort: 11080

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host scrypted.beaver-cloud.xyz]
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
